# translate-bot

./: README.md  pyproject.toml
translationslackbot/: __init__.py  routes.py
