[tool.poetry]
name = "translationslackbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
black = "^23.3.0"
poethepoet = "^0.20.0"
googletrans = "4.0.0-rc1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
blackFormat = "black ."
format = ["blackFormat"]
